<resources>

    <string name="app_name">Arahku</string>
    <!-- cd = Content Description -->
    <string name="cd_landing_image">Landing Image</string>
    <string name="cd_logo_arahku">Logo Arahku</string>
    <string name="txt_btn_login">Masuk</string>
    <string name="txt_btn_register">Daftar</string>
    <string name="slogan_arahku">Navigate Succes For Future Prospective Students</string>
    <string name="welcome_to_arahku">Selamat Datang di Arahku!</string>
    <string name="landing_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</string>
    <string name="cd_login_image">Login Image</string>
    <string name="txt_tv_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="tv_dont_have_account">Belum memiliki akun?</string>
    <string name="tv_register_here">Daftar disini</string>
    <string name="txt_tv_register">REGISTER</string>
    <string name="hint_name">Nama</string>
    <string name="hint_phone">No Telepon</string>
    <string name="hint_birth_date">Tanggal Lahir</string>
    <string name="hint_address">Alamat</string>
    <string name="tv_have_an_account">Sudah memiliki akun?</string>
    <string name="tv_login_here">Masuk di sini</string>
    <string name="tv_welcome">Welcome Back,</string>
    <string name="tv_user">User Arahku</string>
    <string name="txt_button_sudah">Sudah</string>
    <string name="txt_button_ragu_ragu">Ragu-ragu</string>
    <string name="txt_button_belum">Belum</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profil</string>
    <string name="title_chat">Pesan</string>
    <string name="title_notification">Notification</string>
    <string name="tv_tes">Tes</string>
    <string name="minat_bakat">Minat Bakat</string>
    <string name="otak_kanan_otak_kiri"><![CDATA[Otak Kanan & Otak Kiri]]></string>
    <string name="kelayakan_jurusan">Kelayakan Jurusan</string>
    <string name="empty_field_error">Tolong isi Field yang kosong</string>
    <string name="register_success_message">Pendaftaran berhasil, silahkan tunggu email verifikasi :)</string>
    <string name="register_failure_message">Pendaftaran gagal, silahkan daftar kembali :)</string>
    <string name="cd_calendar">Calendar</string>
    <string name="tv_home_slogan_1">Salam pengetahuan\nBagi kita semua</string>
    <string name="tv_home_slogan_2">Sudahkah anda\nmenentukan jurusan\nmasa depan?</string>
    <string name="tv_slogan_banner">Panjang umur perjuangan, Panjang umur ilmu pengetahuan!</string>
    <string name="tes">Tes</string>
    <string name="jurusan">Jurusan</string>
    <string name="kating">Kating</string>
    <string name="blog_kating">Blog Kating</string>
    <string name="universitas">Universitas</string>
    <string name="teman_dekat">Teman Dekat</string>
    <string name="slogan_menu_test">Panjang umur perjuangan, Panjang umur ilmu pengetahuan!</string>
    <string name="name_test">Nama Tes</string>
    <string name="description_test">Deskripsi Tes</string>
    <string name="desc_test">Deskripsi Tes</string>
    <string name="tentang_tes">Tentang Tes</string>
    <string name="instruction_test">Instruksi Tes</string>
    <string name="desc_instruction_test">Deskripsi Instruksi Tes</string>
    <string name="search_hint">Mau cari jurusan apa nih?</string>
    <string name="no_data">Tidak ada data</string>
    <string name="mulai_tes">Mulai Tes</string>
    <string name="nama_user_chat">Nama User</string>
    <string name="teks_chat">Teks Chat</string>
    <string name="time">Time</string>
    <string name="hint_chat">Cari Pesan</string>
    <string name="Bearer">"Bearer "</string>
    <string name="user_name">nama</string>
    <string name="nama_jurusan">Nama Jurusan</string>
    <string name="logout">logout</string>
    <string name="result_text">Selamat, %1$s</string>
    <string name="submit">Submit</string>
    <string name="result_desc">Berdasarkan tes dan hasil, kamu sangat cocok di jurusan :</string>
    <string name="kembali">Kembali</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="major_name">Nama Jurusan</string>
    <string name="major_description">Deskripsi Jurusan</string>
    <string name="jarak_user">Jarak User</string>
    <string name="nama_universitas">Nama Universitas</string>
    <string name="detail_universitas">Detail Universitas</string>
    <string name="find_your_friend">Temukan teman seilmu, sejalan dan seperjuangan disekitarmu</string>
    <string name="nama_kating">Nama Kating</string>
    <string name="semester">Semester</string>
    <string name="password_validation_error">Password tidak boleh kurang dari 6</string>
    <string name="email_validation_error">Format email salah</string>

</resources>