<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="-3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_chat"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_verified"
            android:layout_width="15dp"
            android:layout_height="0dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_chat"
            app:layout_constraintStart_toStartOf="@+id/tv_name_chat"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_chat"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_name_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="14dp"
            android:text="@string/nama_user_chat"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_time"
            app:layout_constraintStart_toEndOf="@+id/iv_user_chat"
            app:layout_constraintTop_toTopOf="@+id/iv_user_chat" />

        <TextView
            android:id="@+id/tv_teks_chat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/teks_chat"
            android:gravity="center_vertical"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_verified"
            app:layout_constraintEnd_toEndOf="@+id/tv_name_chat"
            app:layout_constraintStart_toEndOf="@+id/iv_verified"
            app:layout_constraintTop_toTopOf="@+id/iv_verified" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_name_chat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>